--- a/src/layouts/ProjectsLayout.astro
+++ b/src/layouts/ProjectsLayout.astro
@@ -4,9 +4,11 @@ import "../styles/global.css";
 ---
 
 <Layout>
+  <div class="w-full relative bg-fixed bg-cover bg-no-repeat bg-center main-bg">
   <main class="content-wrapper mx-auto py-12 px-6 sm:px-8 lg:px-10 text-base md:text-lg leading-relaxed">
     <slot />
   </main>
+</div>
 </Layout>
 
 <style>
