--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -84,8 +84,8 @@ function toEmbed(url) {
 ---
 
 <!-- PAGE PROJET -->
-<ProjectsLayout>    
-<div class="project-page ">
+<ProjectsLayout>  
+<div class="project-page">
 
   <div data-aos="fade-up" class="max-w-4xl mt-10 pt-10 mx-auto ">
 
@@ -395,6 +395,7 @@ function toEmbed(url) {
 </div>
     </div>
   </div>
+<!-- </div> -->
 </ProjectsLayout> 
 
 <style>
