--- a/src/pages/certifications.astro
+++ b/src/pages/certifications.astro
@@ -18,20 +18,28 @@ const sortedCertifications = [...certifications].sort(
 ---
 
 <BaseLayout>
-  <section class="px-4 py-20">
-    <div class="max-w-6xl mx-auto">
-      <h1 class="text-4xl font-bold text-center mb-12">
-        Toutes mes certifications
-      </h1>
+  <div
+    class="min-h-screen w-full"
+  >
+    <section class="px-4 py-20">
+      <div class="max-w-6xl mx-auto">
+        <h1 class="text-4xl font-bold text-center mb-12">
+          Toutes mes certifications
+        </h1>
 
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 justify-items-center">
-        {sortedCertifications.map((cert) => 
-        <CertificationCard cert={cert} />
-        )}
+        <div
+          class="grid grid-cols-1 sm:grid-cols-2 gap-10 justify-items-center"
+        >
+          {
+            sortedCertifications.map((cert) => (
+              <CertificationCard cert={cert} />
+            ))
+          }
+        </div>
+        <div class="mt-12 text-center">
+          <Button href="/" variant="gradient">← Retour à l’accueil</Button>
+        </div>
       </div>
-      <div class="mt-12 text-center">
-        <Button href="/" variant="gradient">← Retour à l’accueil</Button>
-      </div>
-    </div>
-  </section>
+    </section>
+  </div>
 </BaseLayout>
