--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,9 +30,8 @@ const projects = [...allProjects]
     <!-- Hero Section -->
     <div
       class="max-h-screen h-screen flex items-center justify-center bg-[url(/src/assets/images/jei-lee-yRXuXvy4sQ4-unsplash.jpg)] dark:bg-[url(/src/assets/images/bg-black1.webp)] bg-cover bg-center px-4"
-      style="margin-top: -4rem; height: calc(100vh + 4rem);"
->
-      >
+      style="margin-top: -4rem; height: calc(100vh + 4rem);">
+      
       <div class="text-center grid items-center gap-4 max-w-4xl mx-auto">
         <Image
           src={portrait}
@@ -50,14 +49,16 @@ const projects = [...allProjects]
           class="text-gradient text-6xl md:text-6xl font-bold mb-6"
           data-aos="zoom-in-up"
           data-aos-duration="1200"
-          data-aos-offset="200"
-        >
+          data-aos-offset="200">
           Isabelle LAMARRE
         </h1>
         <div>
         <h2 data-aos="zoom-in-down"
           data-aos-duration="1200"
-          data-aos-offset="200"><em class="text-[var(--neon)]">La Licorne Cosmique</em></h2>
+          data-aos-offset="200">
+          <em class="text-[var(--neon)]">
+            La Licorne Cosmique</em>
+          </h2>
         </div>
         <p
           class="text-3xl max-w-2xl mx-auto"
