changement de police

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,13 +18,12 @@ const GA_ID = import.meta.env.PUBLIC_GA_ID;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="preload"href="/fonts/roboto-regular.woff2"as="font" type="font/woff2" crossorigin/>
+    <link rel="preload"href="/fonts/roboto-italic.woff2"as="font" type="font/woff2" crossorigin/>
     <link rel="preconnect" href="https://res.cloudinary.com" crossorigin />
     <link rel="dns-prefetch" href="https://res.cloudinary.com" />
     <title>Isabelle LAMARRE Portfolio</title>
-    <meta
-      name="description"
-      content="Portfolio d'Isabelle LAMARRE - Développeuse Web/JS/React/Next/Astro"
-    />
+    <meta name="description" content="Portfolio d'Isabelle LAMARRE - Développeuse Web/JS/React/Next/Astro" />
     <meta name="ga-id" content={GA_ID} />
 
     <!-- Script pour éviter le flash de contenu -->
