--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,18 +46,18 @@ const projects = [...allProjects]
           data-aos-offset="200"
         />
         <h1
-          class="text-gradient text-6xl md:text-6xl font-bold mb-6"
+          class="text-gradient text-6xl md:text-6xl font-extrabold mb-6"
           data-aos="zoom-in-up"
           data-aos-duration="1200"
           data-aos-offset="200">
           Isabelle LAMARRE
         </h1>
         <div>
-        <h2 data-aos="zoom-in-down"
+        <h2 class="italic text-[var(--neon)]"
+          data-aos="zoom-in-down"
           data-aos-duration="1200"
           data-aos-offset="200">
-          <em class="text-[var(--neon)]">
-            La Licorne Cosmique</em>
+            La Licorne Cosmique
           </h2>
         </div>
         <p
