--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,59 +9,27 @@
    🧱 Police
 -------------------------------- */
 @font-face {
-  font-family: "HindSiliguri-Light";
-  src: url(../assets/font/HindSiliguri-Light.ttf) format("truetype");
-  font-weight: 300;
+  font-family: "Roboto";
+  src: url("/fonts/roboto-regular.woff2") format("woff2");
+  font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "HindSiliguri-Regular";
-  src: url(../assets/font/HindSiliguri-Regular.ttf) format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "HindSiliguri-Medium";
-  src: url(../assets/font/HindSiliguri-Medium.ttf) format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "HindSiliguri-SemiBold";
-  src: url(../assets/font/HindSiliguri-SemiBold.ttf) format("truetype");
-  font-weight: 600;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "HindSiliguri-Bold";
-  src: url(../assets/font/HindSiliguri-Bold.ttf) format("truetype");
-  font-weight: 700;
-  font-style:italic;
   font-display: swap;
 }
 
-:root {
-    --font-regular: "HindSiliguri-Regular", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-    Roboto, Arial, "Noto Sans", sans-serif;
-    --font-bold: "HindSiliguri-Bold", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-    Roboto, Arial, "Noto Sans", sans-serif;
-    --font-semibold: "HindSiliguri-SemiBold", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-    Roboto, Arial, "Noto Sans", sans-serif;
-    --font-light: "HindSiliguri-Light", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-    Roboto, Arial, "Noto Sans", sans-serif;
-    --font-medium: "HindSiliguri-Medium", ui-sans-serif, system-ui, -apple-system, "Segoe UI",
-    Roboto, Arial, "Noto Sans", sans-serif;
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/roboto-italic.woff2") format("woff2");
+  font-weight: 100 900;
+  font-style: italic;
+  font-display: swap;
 }
+
 /* ------------------------------
    🧱 Styles de base
 -------------------------------- */
 html {
   scroll-behavior:smooth;
-  font-family: var(--font-regular);
+  font-family: "Roboto", system-ui, -apple-system, "Segoe UI", Arial, sans-serif;
 }
 
 html.dark {
@@ -84,7 +52,7 @@ body {
    🪶 Titres
 -------------------------------- */
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-serif);
+  /* font-family: var(--font-serif); */
   font-weight: 700;
   color: var(--color-primary);
   margin-bottom: 0.5em;
